collects/tests/typed-racket/fail/make-predicate-mod1.rkt
#;
(exn-pred exn:fail:syntax? #rx".*could not be converted to a contract.*")

#lang typed/racket/base

(make-predicate (Number -> Number))
